# minplascalc

./: .gitignore  .pre-commit-config.yaml  .testignore  .travis.yml  C+.json  CHANGELOG.md  CITATION.cff  Makefile  MinPlasCalc.py  O+.json  README.md  README.rst  Scrape NIST data.ipynb  Tutorial 0 - Background And Theory.ipynb  Tutorial 1 - Adding Monatomic Data - Manual.ipynb  Tutorial 1 - Adding Monatomic Data.ipynb  Tutorial 2 - Adding Diatomic Data.ipynb  Tutorial 2 - Adding Monatomic Data - Automatic.ipynb  Tutorial 3 - Adding Diatomic Data.ipynb  Tutorial 4 - Calculating Partition Functions.ipynb  Tutorial 5 - Oxygen Plasma LTE Composition.ipynb  Tutorial 6 - Oxygen Plasma Density and Cp.ipynb  Tutorial 7 - SiCO Plasma LTE Composition.ipynb  Tutorial 8 - SiCO Plasma Density and Cp.ipynb  carbonPlasmaComponents  conf.py  demoguide.ipynb  environment.yml  index.rst  justfile  kinetic.c  lowkeModel.py  ltePlasmaClasses.py  minplascalc.py  ne.csv  plasmaClasses.py  pyproject.toml  requirements.txt  setup.py  test.json  (+15 more)
.github/: dependabot.yml
.github/workflows/: on-push.yml  publish.yml  test.yaml  tests-cov.yml
Compositions/: OxygenPlasma.json  OxygenPlasma3sp.json  OxygenPlasma4sp.json  OxygenPlasma5sp.json
FactsageData/: carbonPlasmaData
NistData/: C+.json  CO.json  O++.json  O+.json  O.json  O2+.json  O2.json  OI.json  OII.csv  OII.json  OIII.csv  OIII.json  OO.csv  OO.json  parseCsvToJson
NistData/LevelDataParsed/: OI.csv
NistData/LevelDataRaw/: OI.csv
NistData/OldCsvStyle/: OI.csv  OII.csv  OIII.csv  OO.csv
NistData/RawData/: MolMassCalculator.xlsx  NistPlasmaDataParse.ipynb  OII.csv  OIII.csv  nist_C  nist_C++  nist_Si  nist_Si+
NistData/RawData/IonisationEnergies/: O.csv
NistData/RawLevelData/: nist_O++  nist_Si
NistData/RawLevelData/.ipynb_checkpoints/: NistPlasmaDataParse-checkpoint.ipynb
ci/: environment-ci.yml
data/demo/nist/: energy_levels_O_II.npy  nist_Oplus_emission_lines  nist_Oplus_levels  spectral_lines_O_II.npy
data/mixtures/: OxygenPlasma4sp.json
data/papers/Boulos2023/: O2.csv
data/species/: C++.json  C+.json  C.json  CO+.json  CO.json  O++.json  O+.json  O-.json  O.json  O2+.json  O2-.json  O2.json  Si++.json  Si+.json  Si.json  SiO+.json  SiO.json
data/species_raw/: nist_C+  nist_O  nist_Si++
docs/: Makefile  conf.py  index.md  minplascalc.pptx  original_conf.py  prepare_docs.py
docs/_static/: custom.css
docs/references/: _bibliography.rst
docs/theory/: Background_Theory.md
examples/: README.rst  plot_tutorial4_calculating_partition_functions.py  plot_tutorial5_oygen_plasma_lte_composition.py  plot_tutorial6_oxygen_plasma_density_and_cp copy.py  plot_tutorial6_oxygen_plasma_density_and_cp.py  plot_tutorial7_oxygen_plasma_transport_properties.py  plot_tutorial8_SiCO_plasma_LTE_composition.py  plot_tutorial_01_adding_monoatomic_data.py  plot_tutorial_02_adding_diatomic_data.py  plot_tutorial_03_adding_polyatomic_data.py  plot_tutorial_04_calculating_partition_functions.py  plot_tutorial_05_oygen_plasma_lte_composition.py  plot_tutorial_06_oxygen_plasma_density_and_cp.py  plot_tutorial_07_oxygen_plasma_transport_properties.py  plot_tutorial_08_SiCO_plasma_LTE_composition.py  plot_tutorial_09_SiCO_plasma_density_and_cp.py  plot_tutorial_10_SiCO_plasma_transport_properties.py
minplascalc/: __init__.py  atomic_data.py  constants.py  core.py  data_transport.py  functions_radiation.py  functions_transport.py  functions_transport_jit.py  mixture.py  nist_parsers.py  parsers.py  readers.py  species.py  units.py  utilities.py  utils.py
minplascalc/data/mixtures/: OxygenPlasma.json  OxygenPlasma3sp.json  OxygenPlasma5sp.json  SiCO_10_90_plasma.json  SiCO_50_50_plasma.json  SiCO_90_10_plasma.json  SiCO_plasma.json
minplascalc/data/species/: C++.json  C+.json  C.json  CO+.json  CO.json  O++.json  O+.json  O-.json  O.json  O2+.json  O2-.json  O2.json  Si++.json  Si+.json  Si.json  SiO+.json  SiO.json
minplascalc/data/species_raw/: nist_O+
minplascalc/transport/: collision_cross_section.py  collision_cross_section_jit.py  functions_transport.py  functions_transport_jit.py  potential_functions.py  potential_functions_jit.py  q_hat_matrix.py  q_hat_matrix_jit.py  q_matrix.py  q_matrix_jit.py
mixtures/: OxygenPlasma3sp.json  OxygenPlasma4sp.json
notebooks/: Tutorial 0 - Background And Theory.ipynb  Tutorial 1 - Adding Monatomic Data - Manual.ipynb  Tutorial 1 - Adding Monatomic Data.ipynb  Tutorial 10 - SiCO Plasma Transport Properties.ipynb  Tutorial 2 - Adding Diatomic Data.ipynb  Tutorial 2 - Adding Monatomic Data - Automatic.ipynb  Tutorial 3 - Adding Diatomic Data.ipynb  Tutorial 3 - Adding Polyatomic Data.ipynb  Tutorial 3a - Adding Polyatomic Data.ipynb  Tutorial 4 - Calculating Partition Functions.ipynb  Tutorial 5 - Oxygen Plasma LTE Composition.ipynb  Tutorial 6 - Oxygen Plasma Density and Cp.ipynb  Tutorial 7 - Oxygen Plasma Transport Properties.ipynb  Tutorial 7 - SiCO Plasma LTE Composition.ipynb  Tutorial 8 - SiCO Plasma Density and Cp.ipynb  Tutorial 8 - SiCO Plasma LTE Composition.ipynb  Tutorial 9 - SiCO Plasma Density and Cp.ipynb
scripts/: electron_cross_section.py  fit_electron_cross_section.py  generate_monoatomic_data.py
src/minplascalc/: __init__.py  functions_radiation.py  functions_transport.py  mixture.py  parsers.py  species.py  utils.py
src/minplascalc/data/species/: C+.json  CO.json  O++.json  O+.json  O-.json  O2.json  Si+.json  Si.json
test/notebooks/: test_notebooks.py
test/unit/: test_datafiles.py  test_mixture.py  test_species.py
tests/: test_00_version.py  test_datafiles.py  test_mixture.py  test_nist_parsers.py  test_species.py
tests/notebooks/: test_notebooks.py
tests/unit/: test_parsers.py  test_species.py
usecasedocs/: use_case.ipynb
